--- a/src/main/webapp/WEB-INF/html/vote/index.html
+++ b/src/main/webapp/WEB-INF/html/vote/index.html
@@ -6,6 +6,12 @@
 	href="../../../resources/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css"
 	href="../../../resources/c3/c3.min.css">
+
+	<link rel="stylesheet"
+		  href="${pageContext.request.contextPath}/resources/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet"
+		  href="${pageContext.request.contextPath}/resources/main.css">
+
 <title>Title</title>
 
 <style>
@@ -19,7 +25,7 @@
 
 	<div class="container row">
 		<div class="col-lg-8 col-md-8"></div>
-		<div class="col-lg-3 col-md-3">
+		<div class="col-lg-3 col-md-3" id="chart-parent">
 			<div id="chart_q1" class="chart"></div>
 			<div id="chart_q2" class="chart"></div>
 			<div id="chart_q3" class="chart"></div>
