update vote summary

--- a/src/main/webapp/resources/test/voteDate.html
+++ b/src/main/webapp/resources/test/voteDate.html
@@ -160,8 +160,8 @@
             </div>
 
             <div class="btn-group">
-                <button class="btn btn-danger">清空数据</button>
-                <button class="btn btn-danger">现在结束</button>
+                <a href="#" target="_blank" class="btn btn-primary">清空数据</a>
+                <a href="#" target="_blank" class="btn btn-primary">现在结束</a>
             </div>
 
         </div>
