--- a/src/main/webapp/resources/c3/index.html
+++ b/src/main/webapp/resources/c3/index.html
@@ -37,12 +37,8 @@
     var chart_q1=c3.generate({
         bindto:'#chart_q1',
         data:{
-            columns:[
-                ['data1',354],
-                ['data2',124],
-                ['data3',38],
-                ['data4',259]
-            ],
+            columns:[["A":[1],"B":[1],"C":[1],"D":[3]]
+            ,
             type:'pie'
         }
     });
